# AI-knowledge-engine

./: .dockerignore  .gitignore  Dockerfile  README.md  clean_reqs.py  ideas_journal.json  knowledge_base.json  learning_roadmaps.json  main.py  mindmaps.json  pyproject.toml  railway.toml  requirements.txt  test.py
ai_agent.egg-info/: PKG-INFO
chroma_db/: chroma.sqlite3
frontend/: index.html
